--- a/Web/zad6/styles/style.css
+++ b/Web/zad6/styles/style.css
@@ -90,24 +90,48 @@ body {
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     margin: 0 10px;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden; /* added */
 }
 
 .text {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    padding: 20px;
+    padding: 10px 20px;
+    color: #333;
+    position: absolute;
+    bottom: -50px;
+    left: -20px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    line-height: 1.5;
+    height: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /* Footer styles */
 
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #333;
+    background: #333;
     color: #fff;
-    height: 50px;
+    padding: 20px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    animation: moveUp 0.5s ease-in-out forwards;
 }
+
+@keyframes moveUp {
+    from {
+        transform: translateY(100%);
+    }
+    to {
+        transform: translateY(0%);
+    }
+}
+
 
 footer p {
     font-family: 'Montserrat', sans-serif;
