--- a/CryptographyProject/View/src/main/resources/DsaWindow.fxml
+++ b/CryptographyProject/View/src/main/resources/DsaWindow.fxml
@@ -42,7 +42,7 @@
       <Text fx:id="saveSignedTextPath" layoutX="490.0" layoutY="548.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Save file containing cipher" wrappingWidth="266.26668701171866" />
       <Text fx:id="chooseFile2PathText" layoutX="487.0" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose file to load" wrappingWidth="239.4698486328125" />
       <Button fx:id="chooseFileButton2" layoutX="726.0" layoutY="280.0" mnemonicParsing="false" onAction="#chooseFileButtonAction" prefHeight="25.0" prefWidth="84.0" text="Choose File" />
-      <Button fx:id="saveSignatureButton" layoutX="280.0" layoutY="531.0" mnemonicParsing="false" onAction="#saveSignatureButtonAction" prefHeight="26.0" prefWidth="56.0" text="Save" />
+      <Button fx:id="saveTextButton" layoutX="280.0" layoutY="531.0" mnemonicParsing="false" onAction="#saveTextButtonAction" prefHeight="26.0" prefWidth="56.0" text="Save" />
       <Button fx:id="saveSignedTextButton" layoutX="756.0" layoutY="531.0" mnemonicParsing="false" onAction="#saveSignedTextButtonAction" prefHeight="26.0" prefWidth="56.0" text="Save" />
       <TextField fx:id="DsaGeneratedKeyField2" layoutX="170.0" layoutY="85.0" prefHeight="25.0" prefWidth="643.0">
          <font>
